tests/ui/invalid_pyfunction_definition.stderr
error: functions inside #[pymethods] do not need to be annotated with #[pyfunction]
  --> tests/ui/invalid_pyfunction_definition.rs:12:9
   |
12 |         fn bug() {}
   |         ^^^^^^^^
